--- a/index.html
+++ b/index.html
@@ -239,5 +239,5 @@
         </div>
   </footer>
 </body>
-
+<a class="newsite" href="https://github.com/Maricod/Maricod.github.io/blob/master/MyTour/index.html"></a>
 </html>
