--- a/index.html
+++ b/index.html
@@ -238,6 +238,6 @@
     <div class="empty"></div>
         </div>
   </footer>
-     <a class="newsite" href="https://github.com/Maricod/Maricod.github.io/blob/master/MyTour/index.html">newsite</a>
+     <a class="newsite" href="https:Maricod.github.io/blob/master/MyTour/index.html">newsite</a>
 </body>
 </html>
