--- a/index.html
+++ b/index.html
@@ -238,6 +238,6 @@
     <div class="empty"></div>
         </div>
   </footer>
-     <a class="newsite" href="https://MyTour/index.html">newsite</a>
+     <a class="newsite" href="MyTour/index.html">newsite</a>
 </body>
 </html>
