--- a/Game/index.html
+++ b/Game/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <script src="https://netology-code.github.io/js-game/js/app.js"></script>
-    <script src="./index.js"></script>
+    <script src="./game.js"></script>
   </body>
   </html>
